Working ChatAlice frontend with login logic and able to talk to workflow endpoint, added chats, and  improved DB logic to populate docs, improved python module to offer chat responses and created a backend class to handle operations

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "mongoose-schema-jsonschema": "^2.2.0"
   }
