--- a/alice_frontend/package.json
+++ b/alice_frontend/package.json
@@ -18,9 +18,11 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.6",
     "@types/react": "^18.3.3",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.2",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.23.1",
