Finished the initial frontend implementation and structure. A few more features to add and then switching back to working on workflow

--- a/alice_frontend/tsconfig.json
+++ b/alice_frontend/tsconfig.json
@@ -17,6 +17,6 @@
     "jsx": "react-jsx",
     "plugins": [{ "name": "typescript-plugin-css-modules" }]
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/components/ui/background-gradient-animation.txs"],
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
   "exclude": ["node_modules", "build"]
 }
