Created initialization logic for the database, with a user flow to create an admin user as well. Still some issues. Refactored the Workflow module too.

--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -8,7 +8,7 @@ WORKDIR /app
 COPY package*.json ./
 
 # Install dependencies
-RUN npm install
+RUN npm install --legacy-peer-deps --network-timeout=100000
 
 # Install TypeScript and nodemon globally
 RUN npm install -g typescript nodemon
