--- a/workflow_logic/Dockerfile
+++ b/workflow_logic/Dockerfile
@@ -20,5 +20,8 @@ RUN apt-get update && apt-get install -y iputils-ping
 # Make port 80 available to the world outside this container
 EXPOSE 8000
 
+HEALTHCHECK --interval=10s --timeout=10s --start-period=30s --retries=20 \
+  CMD curl -f http://localhost:${WORKFLOW_PORT_DOCKER}/health || exit 1
+
 # Command to run the Python app
 CMD ["python", "workflow_logic/main.py"]
