--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,8 +6,10 @@ services:
     ports:
       - "${FRONTEND_PORT}:${FRONTEND_PORT_DOCKER}"
     depends_on:
-      - backend
-      - workflow
+      backend:
+        condition: service_healthy
+      workflow:
+        condition: service_healthy
     volumes:
       - ./alice_frontend:/app:delegated
       - /app/node_modules
@@ -23,24 +25,26 @@ services:
     ports:
       - "${BACKEND_PORT}:${BACKEND_PORT_DOCKER}"
     depends_on:
-      - mongo
+      mongo:
+        condition: service_started
     volumes:
       - ./.env:/app/.env
       - ./backend:/app
       - /app/node_modules
     environment:
       - NODE_ENV=development
+    command: sh -c "npm run build && nodemon --watch src --ext ts --exec 'npm run build && node dist/index.js'"
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:${BACKEND_PORT_DOCKER}/api/health"]
       interval: 30s
       timeout: 10s
-      retries: 3
-      start_period: 40s
+      retries: 10
+      start_period: 20s
 
   mongo:
     image: mongo:latest
     ports:
-      - "26017:27017" 
+      - "26017:27017"
     volumes:
       - mongo_data:/data/db
 
@@ -61,5 +65,12 @@ services:
       - HOST=host.docker.internal
     extra_hosts:
       - "host.docker.internal:host-gateway"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:${WORKFLOW_PORT_DOCKER}/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 10
+      start_period: 10s
+
 volumes:
   mongo_data:
