--- a/alice_frontend/package.json
+++ b/alice_frontend/package.json
@@ -29,12 +29,14 @@
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
+    "react-syntax-highlighter": "^15.5.0",
     "tailwind-merge": "^2.3.0",
     "typescript": "^5.4.5",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4"
