Minor fixes and some cleanup, and now everything seems to be working

--- a/workflow_logic/requirements.txt
+++ b/workflow_logic/requirements.txt
@@ -1,19 +1,19 @@
 pyautogen
-langchain
-langchain_openai
-langchain-community
-langgraph
-pytz
-stackapi
+# langchain
+# langchain_openai
+# langchain-community
+# langgraph
+# pytz
+# stackapi
 exa_py
+aiohttp
 praw
-xmltodict
+# xmltodict
 arxiv
 wikipedia
 replicate
-whisper
-tiktoken
-guidance
+# whisper
+# tiktoken
 openai
 pymongo
 jinja2
