Still dealing with an issue with the chat functionality related to functions. Added a proper Test module that will provide api health updates to the frontend, and allow testing of (1) db initialization data (validate instances, references, etc), (2) api status, (3) chat functionality (basic, function use) and (4) tasks -> Testing functionality of each task type that has been used in the db init data. In the future these test modules can be used by the API App to validate tasks, and check status of used apis. Beyond that, fixed all the task errors I found, with the exception of the mentioned chat functionality with functions

--- a/workflow_logic/requirements.txt
+++ b/workflow_logic/requirements.txt
@@ -7,7 +7,12 @@
 # xmltodict
 # whisper
 # tiktoken
+asynctest
+pytest
+pytest-asyncio
 pyautogen
+pyautogen["anthropic"]
+anthropic
 exa_py
 aiohttp
 praw
