--- a/template.env
+++ b/template.env
@@ -37,8 +37,5 @@ JWT_SECRET=your_very_long_and_secure_random_string_here
 ADMIN_TOKEN=your_admin_jwt_token_here
 
 # Logging Configuration
-LOG_LEVEL=INFO
+LOG_LEVEL=NONE
 LOGGING_FOLDER=logs
-
-# Add any additional environment-specific variables below
-# EXAMPLE_VARIABLE=example_value
