Workflow: After a few days, I finally finished an initial version of the new api engine logic, as well as removing the chat functionality and adding that logic to the agents. Now the agents knows how to generate a response, including tool execs and code exec, and tasks and chat can use the agent to run the required conversation. With this, I completely removed the need for the autogen library. Backend: Added an LM-studio route that acts as the endpoint in the container to generate completions with the local setup. This could be done directly, but doing it like this allows me to manage the data better. Frontend: Minor updates and fixes.

--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -23,5 +23,5 @@ EXPOSE 3000
 HEALTHCHECK --interval=10s --timeout=10s --start-period=30s --retries=20 \
   CMD curl -f http://localhost:3000/api/health || exit 1
 
-# Start the server with nodemon for development
+# Start the Node.js application
 CMD ["sh", "-c", "npm run build && nodemon --watch src --ext ts --exec 'npm run build && node dist/index.js'"]
