Frontend: Fixed some minor things across the board. Backend: Similar story. Finishing cleaning up the interfaces after the last few updates. Workflow: Created unit tests for tasks, agent and prompt tasks. Updated initialization data to create agents that use openai, anthropic and lm studio for testing. Consolidated TemplatedTask into PromptAgentTask, moved CodeExecTask to inherit from BasicAgentTask instead of PromptAgentTask since it doesnt use a template and it doesnt even need the llm_api. Completely removed Autogen from the project now. Minor fixes across the board.

--- a/workflow_logic/requirements.txt
+++ b/workflow_logic/requirements.txt
@@ -11,8 +11,6 @@ debugpy
 asynctest
 pytest
 pytest-asyncio
-pyautogen
-pyautogen[anthropic]
 anthropic
 exa_py
 aiohttp
@@ -30,3 +28,4 @@ fastapi
 pydantic
 uvicorn
 fastapi-cors
+docker
