Minor fixes. Flirted with the idea of importing the LMS sdk from js/ts to py, but for now will keep using it as is. Minor frontend fixes and updates, streamlined the card views for most components, updated the readme and created script files to deploy.

--- a/alice_frontend/Dockerfile
+++ b/alice_frontend/Dockerfile
@@ -1,26 +1,26 @@
-# Use the official Node.js image as a base image
-FROM node:16 AS build
+# # Use the official Node.js image as a base image
+# FROM node:16 AS build
 
-# Set the working directory
-WORKDIR /app
+# # Set the working directory
+# WORKDIR /app
 
-# Copy package.json and package-lock.json
-COPY package*.json ./
+# # Copy package.json and package-lock.json
+# COPY package*.json ./
 
-# Install dependencies with the --legacy-peer-deps flag
-RUN npm install --legacy-peer-deps
+# # Install dependencies with the --legacy-peer-deps flag
+# RUN npm install --legacy-peer-deps
 
-# Install TypeScript
-RUN npm install -g typescript
+# # Install TypeScript
+# RUN npm install -g typescript
 
-# Copy the rest of the application code
-COPY . .
+# # Copy the rest of the application code
+# COPY . .
 
-# Compile TypeScript to JavaScript
-RUN tsc
+# # Compile TypeScript to JavaScript
+# RUN tsc
 
-# Build the React app
-RUN npm run build
+# # Build the React app
+# RUN npm run build
 
 # Use a lightweight Node.js image for production
 FROM node:16-alpine
