--- a/alice_frontend/Dockerfile.dev
+++ b/alice_frontend/Dockerfile.dev
@@ -8,7 +8,7 @@ WORKDIR /app
 COPY package*.json ./
 
 # Install dependencies with the --legacy-peer-deps flag
-RUN npm install --legacy-peer-deps --network-timeout=100000
+RUN npm install --legacy-peer-deps
 
 # Add `/app/node_modules/.bin` to $PATH
 ENV PATH /app/node_modules/.bin:$PATH
