Workflow: Fixed more issues with workflow and code execs. Updated some init modules. Now code exec takes all the inputs and creates a single code block to allow for testing and referencing other code. Backend: Fixed an issue with updates, and by fix I mean I removed validation that was being a headache. Frontend: Minor updates to TaskResponse.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -57,6 +57,7 @@ services:
       - "${WORKFLOW_PORT}:${WORKFLOW_PORT_DOCKER}"
     volumes:
       - .:/app
+      - /var/run/docker.sock:/var/run/docker.sock  # Add this line
     depends_on:
       backend:
         condition: service_healthy
