--- a/workflow_logic/Dockerfile
+++ b/workflow_logic/Dockerfile
@@ -1,4 +1,4 @@
-# Use the official Python image as a base image
+# Workflow Dockerfile
 FROM python:3.10
 
 # Set the working directory
@@ -9,6 +9,12 @@ COPY requirements.txt ./
 
 # Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
+
+# Install Docker CLI
+RUN apt-get update && apt-get install -y docker.io
+
+# Add the user to the docker group
+RUN groupadd -f docker && usermod -aG docker root
 
 # Copy the rest of the application code
 COPY . .
