--- a/alice_frontend/package.json
+++ b/alice_frontend/package.json
@@ -34,7 +34,8 @@
     "simplex-noise": "^4.0.2",
     "tailwind-merge": "^2.4.0",
     "typescript": "^5.4.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "winston": "^3.13.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
