--- a/alice_frontend/Dockerfile
+++ b/alice_frontend/Dockerfile
@@ -1,38 +1,24 @@
-# # Use the official Node.js image as a base image
-# FROM node:16 AS build
-
-# # Set the working directory
-# WORKDIR /app
-
-# # Copy package.json and package-lock.json
-# COPY package*.json ./
-
-# # Install dependencies with the --legacy-peer-deps flag
-# RUN npm install --legacy-peer-deps
-
-# # Install TypeScript
-# RUN npm install -g typescript
-
-# # Copy the rest of the application code
-# COPY . .
-
-# # Compile TypeScript to JavaScript
-# RUN tsc
-
-# # Build the React app
-# RUN npm run build
-
-# Use a lightweight Node.js image for production
-FROM node:16-alpine
+# Use the official Node.js image as a base image
+FROM node:16 AS build
 
 # Set the working directory
 WORKDIR /app
 
-# Copy the built files from the previous stage
-COPY --from=build /app/build ./build
+# Copy package.json and package-lock.json
+COPY package*.json ./
 
-# Install a lightweight web server
-RUN npm install -g serve
+# Install dependencies with the --legacy-peer-deps flag
+RUN npm install --legacy-peer-deps
 
-# Set the command to serve the app using the build directory
-CMD ["serve", "-s", "build", "-l", "4000"]
+# Install TypeScript
+RUN npm install -g typescript
+
+# Copy the rest of the application code
+COPY . .
+
+# Compile TypeScript to JavaScript
+RUN tsc
+
+RUN npm run build
+
+CMD ["npm", "start"]
