--- a/template.env
+++ b/template.env
@@ -36,3 +36,6 @@ ADMIN_TOKEN=your_admin_jwt_token_here
 # Logging Configuration
 LOG_LEVEL=NONE
 LOGGING_FOLDER=logs
+
+# LM Studio config
+LM_STUDIO_DEFAULT_PRESET="OpenChat"
