--- a/alice_frontend/package.json
+++ b/alice_frontend/package.json
@@ -33,12 +33,14 @@
     "react-syntax-highlighter": "^15.5.0",
     "simplex-noise": "^4.0.2",
     "tailwind-merge": "^2.4.0",
-    "typescript": "^5.4.5",
+    "typescript": "^5.5.4",
     "web-vitals": "^2.1.4",
     "winston": "^3.13.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
+    "@types/debug": "^4.1.12",
+    "@types/mdast": "^4.0.4",
     "@types/react-syntax-highlighter": "^15.5.13",
     "autoprefixer": "^10.4.19",
     "postcss": ">=8.4.6",
