Drafted the api engines for vision, anthropic vision, img gen with openai and beautiful soup. Added the logic to store files in a shared volume, which allows both to use in chats, and deploy in api engines like the vision engine. Improved the Message structure to now hold a list of references, which can be files or task responses. Did some improvements in the docker logic

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,15 @@
 # Use the official Node.js image as a base image
 FROM node:16
 
+# Create a user with UID 1000
+RUN adduser --disabled-password --gecos '' --uid 1000 appuser
+
+# Set the working directory ownership
+RUN chown -R appuser:appuser /app
+
+# Switch to the new user
+USER appuser
+
 # Set the working directory
 WORKDIR /app
 
