--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -1,6 +1,9 @@
 # Use the official Node.js image as a base image
 FROM node:16
 
+# Create a user with UID 1000
+RUN adduser --disabled-password --gecos '' --uid 1000 appuser
+
 # Set the working directory
 WORKDIR /app
 
@@ -14,7 +17,10 @@ RUN npm install --legacy-peer-deps --network-timeout=100000
 RUN npm install -g typescript nodemon
 
 # Copy the rest of the application code
-COPY . .
+COPY --chown=appuser:appuser . .
+
+# Set the working directory ownership
+RUN chown -R appuser:appuser /app
 
 # Expose the application port
 EXPOSE 3000
@@ -22,6 +28,9 @@ EXPOSE 3000
 # Health check to indicate when the service is ready
 HEALTHCHECK --interval=10s --timeout=10s --start-period=30s --retries=20 \
   CMD curl -f http://localhost:3000/api/health || exit 1
+
+# Switch to the new user
+USER appuser
 
 # Start the Node.js application
 CMD ["sh", "-c", "npm run build && nodemon --watch src --ext ts --exec 'npm run build && node dist/index.js'"]
