--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
+    "mongoose-autopopulate": "^1.1.0",
     "mongoose-schema-jsonschema": "^2.2.0",
     "multer": "^1.4.5-lts.1",
     "openai": "^4.55.4",
