More fixes and work on files, messages and task responses, as more errors get fixed, more confusing it gets

--- a/template.env
+++ b/template.env
@@ -34,7 +34,7 @@ JWT_SECRET=your_very_long_and_secure_random_string_here
 ADMIN_TOKEN=your_admin_jwt_token_here
 
 # Logging Configuration
-LOG_LEVEL=NONE
+LOG_LEVEL=INFO
 LOGGING_FOLDER=logs
 
 # LM Studio config
@@ -42,3 +42,6 @@ LM_STUDIO_DEFAULT_PRESET="OpenChat"
 
 # ENV MODE
 NODE_ENV=production
+
+SHARED_UPLOAD_DIR=/app/shared-uploads
+COMPOSE_PROJECT_DIR=.
