Massive updates across the borad. Some troubleshooting missing but everything mostly works. Now all items when sent to the backend with a reference object, those references are updated too

--- a/alice_frontend/tsconfig.json
+++ b/alice_frontend/tsconfig.json
@@ -20,7 +20,7 @@
   "include": [
     "src/**/*.ts", 
     "src/**/*.tsx",
-    "src/types/**/*.ts",
+    "src/types/**/*.ts", "../tmp/Message.tsx",
     ],
   "exclude": ["node_modules", "build"]
 }
