--- a/alice_frontend/package.json
+++ b/alice_frontend/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.2",
     "next": "^14.2.5",
+    "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
@@ -30,6 +31,8 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
     "react-syntax-highlighter": "^15.5.0",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "3.0.1",
     "simplex-noise": "^4.0.2",
     "tailwind-merge": "^2.4.0",
     "typescript": "^5.5.4",
