--- a/alice_frontend/package.json
+++ b/alice_frontend/package.json
@@ -43,9 +43,11 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
     "@types/debug": "^4.1.12",
     "@types/mdast": "^4.0.4",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-syntax-highlighter": "^15.5.13",
     "autoprefixer": "^10.4.19",
     "postcss": ">=8.4.6",
+    "react-copy-to-clipboard": "^5.1.0",
     "tailwindcss": "^3.4.4"
   },
   "scripts": {
@@ -72,6 +74,5 @@
       "last 1 safari version"
     ]
   },
-
   "proxy": "http://localhost:3000"
 }
