--- a/alice_frontend/Dockerfile.dev
+++ b/alice_frontend/Dockerfile.dev
@@ -19,5 +19,10 @@ COPY . .
 # Set the environment variable for development mode
 ENV NODE_ENV=development
 
+# # Ensure that the node_modules directory is owned by the node user inside the container.
+# USER root
+# RUN chown -R 1000:1000 /app/node_modules
+# USER node
+
 # Start the development server
 CMD ["npm", "start"]
