--- a/template.env
+++ b/template.env
@@ -1,7 +1,7 @@
 # Project Alice Environment Configuration
 
 # Python Path (adjust for your system)
-PYTHONPATH=/path/to/your/project_alice
+# PYTHONPATH=/path/to/your/project_alice
 
 # API Keys (replace with your actual keys or use placeholders)
 OPENAI_API_KEY=sk-your-openai-api-key
@@ -35,6 +35,7 @@ ADMIN_TOKEN=your_admin_jwt_token_here
 
 # Logging Configuration
 LOG_LEVEL=INFO
+REACT_APP_LOG_LEVEL=INFO
 LOGGING_FOLDER=logs
 
 # LM Studio config
