Workflow: Added 2 workflows, implemented the webscraping logic. Frontend: Slight fixes to chat and messages

--- a/Dockerfile.python
+++ b/Dockerfile.python
@@ -27,7 +27,8 @@ RUN pip install --no-cache-dir \
     pillow \
     plotly \
     seaborn \
-    jupyter
+    jupyter \
+    python-dotenv 
 
 # Set the working directory
 WORKDIR /app
