Troubleshot the web scrape workflow, fixed a few things on the frontend, and added API engines for gemini (llm, stt, vision and embeddings), groq (llm, vision and tts), mistral (llm, vision, embeddings), cohere (llm), meta (llm, vision), as well as adding them to the initialization module with their corresponding models for testing. Testing needed tho.

--- a/template.env
+++ b/template.env
@@ -1,11 +1,14 @@
 # Project Alice Environment Configuration
 
-# Python Path (adjust for your system)
-# PYTHONPATH=/path/to/your/project_alice
-
 # API Keys (replace with your actual keys or use placeholders)
 OPENAI_API_KEY=sk-your-openai-api-key
 ANTHROPIC_API=sk-ant-your-anthropic-api-key
+COHERE_API_KEY=your-api-key
+META_API_KEY=your-api-key
+GEMINI_API_KEY=your-api-key
+MISTRAL_API_KEY=your-api-key
+GROQ_API_KEY=your-api-key
+
 GOOGLE_CSE_ID=your-google-cse-id
 GOOGLE_API_KEY=your-google-api-key
 REDDIT_CLIENT_ID=your-reddit-client-id
