--- a/template.env
+++ b/template.env
@@ -2,7 +2,7 @@
 
 # API Keys (replace with your actual keys or use placeholders)
 OPENAI_API_KEY=sk-your-openai-api-key
-ANTHROPIC_API=sk-ant-your-anthropic-api-key
+ANTHROPIC_API_KEY=sk-ant-your-anthropic-api-key
 COHERE_API_KEY=your-api-key
 META_API_KEY=your-api-key
 GEMINI_API_KEY=your-api-key
@@ -14,6 +14,9 @@ GOOGLE_API_KEY=your-google-api-key
 REDDIT_CLIENT_ID=your-reddit-client-id
 REDDIT_CLIENT_SECRET=your-reddit-client-secret
 EXA_API_KEY=your-exa-api-key
+
+## System configuration
+# --- No need to update the variables below ---
 
 # Database Configuration
 MONGODB_URI=mongodb://mongo/alice_database
