--- a/alice_frontend/package.json
+++ b/alice_frontend/package.json
@@ -19,10 +19,10 @@
     "@types/react": "^18.3.3",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.3.0",
-    "axios": "^1.7.2",
+    "axios": ">=1.7.4",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.2",
-    "next": "^14.2.5",
+    "next": ">=14.2.10",
     "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
