--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "@lmstudio/sdk": "^0.0.12",
-    "axios": "^1.7.3",
+    "axios": ">=1.7.4",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.2",
+    "body-parser": ">=1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": ">=4.20.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "mongoose-autopopulate": "^1.1.0",
