--- a/alice_frontend/package.json
+++ b/alice_frontend/package.json
@@ -15,12 +15,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/dagre": "^0.7.52",
     "@types/jest": "^29.5.12",
     "@types/react": "^18.3.3",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.3.0",
     "axios": ">=1.7.4",
     "clsx": "^2.1.1",
+    "dagre": "^0.8.5",
     "framer-motion": "^11.3.2",
     "next": ">=14.2.10",
     "prismjs": "^1.29.0",
@@ -31,6 +33,7 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
     "react-syntax-highlighter": "^15.5.0",
+    "reactflow": "^11.11.4",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "3.0.1",
     "simplex-noise": "^4.0.2",
