--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,15 +13,15 @@ services:
       volume-init:
         condition: service_completed_successfully
     volumes:
-      - ./alice_frontend:/app:delegated
-      - /app/node_modules
-      - /app/dist
+      # - ./alice_frontend:/app:delegated
+      # - /app/node_modules
+      # - /app/dist
       - ./.env:/app/.env
     environment:
       NODE_ENV: ${NODE_ENV:-production}
-      CI: "false" # "true" # comment out when in development
-      CHOKIDAR_USEPOLLING: "true" ## "false"
-      WATCHPACK_POLLING: "true" ## "false"
+      CI: "true" # "true" # comment out when in development
+      CHOKIDAR_USEPOLLING: "false" ## "false"
+      WATCHPACK_POLLING: "false" ## "false"
 
   backend:
     build:
@@ -36,8 +36,8 @@ services:
         condition: service_completed_successfully
     volumes:
       # - ./backend:/app
-      - /app/node_modules
-      - /app/dist
+      # - /app/node_modules
+      # - /app/dist
       - ./.env:/app/.env
       - logs:/app/logs
       - shared-uploads:/app/shared-uploads
@@ -58,7 +58,7 @@ services:
     ports:
       - "${WORKFLOW_PORT}:${WORKFLOW_PORT_DOCKER}"
     volumes:
-      - .:/app
+      # - .:/app
       - /var/run/docker.sock:/var/run/docker.sock
       - logs:/app/logs
       - shared-uploads:/app/shared-uploads:ro
